back to java 8, doesn't work [skip ci]